// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="Todo"
  >
    <li>
      default todo
    </li>
    <button>
      Edit
    </button>
    <button>
      X
    </button>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot when editing 1`] = `
<DocumentFragment>
  <div
    class="Todo"
  >
    <form>
      <input
        type="text"
        value="default todo"
      />
      <button>
        Update
      </button>
    </form>
  </div>
</DocumentFragment>
`;
